Refactor: Cold Start Citation Challenge 2026 - NeurIPS compliant
- Converted to inductive cold start problem (test nodes have zero edges)
- Implemented NeurIPS competition guidelines:
  * One submission per team enforcement
  * Submission privacy (no raw files in main branch)
  * Kaggle-style dense ranking for ties
  * Explicit A/X graph specification
  * Resource limits (3h CPU, LLM policy)
  * Dataset imbalance documentation
- Added GitHub Actions automation for scoring
- Created interactive leaderboard (GitHub Pages)
- Professional code headers and documentation
- Clean repository structure (removed all dev artifacts)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Private data - NEVER commit ground truth labels
+data/private/
+
 # Python
 __pycache__/
 *.py[cod]
@@ -7,15 +10,10 @@ __pycache__/
 venv/
 env/
 ENV/
-
-# Data files (organizers should generate these)
-data/train.csv
-data/test.csv
-data/test_labels.csv
-
-# Submissions (keep sample, ignore others)
-submissions/*.csv
-!submissions/sample_submission.csv
+.venv
+*.egg-info/
+dist/
+build/
 
 # IDE
 .vscode/
@@ -27,3 +25,5 @@ submissions/*.csv
 .DS_Store
 Thumbs.db
 
+# Logs
+*.log
